<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.axelyray.ecuacionessimultaneas.MainActivity">

    <RelativeLayout
        android:id="@+id/padre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/Texto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Texto_1"
                android:textSize="17sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Texto1"
            android:gravity="center">
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:entries="@array/datos">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutprinc"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner">
            <EditText
                android:inputType="numberSigned"
                android:maxLength="8"
                android:id="@+id/valorx1"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/valor_x1text"/>
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:layout_toRightOf="@+id/valorx1"
                android:id="@+id/valorx2"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/valor_x2text"/>
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:layout_toRightOf="@+id/valorx2"
                android:id="@+id/valorx3"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/valor_x3text" />
            <EditText
                android:maxLength="8"
                android:id="@+id/tx1"
                android:inputType="numberSigned"
                android:gravity="center"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/Total"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutsecond"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutprinc">
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:id="@+id/valorx1_1"
                android:layout_gravity="center"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/valor_x1text"/>
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:id="@+id/valorx2_1"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/valor_x2text"/>
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:id="@+id/valorx3_1"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/valor_x3text"/>
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:id="@+id/tx2"
                android:gravity="center"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/Total"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layouttree"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutsecond">
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:id="@+id/valorx1_2"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/valor_x1text"/>
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:id="@+id/valorx2_2"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:textSize="12sp"
                android:hint="@string/valor_x2text"/>
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:id="@+id/valorx3_2"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:textSize="12sp"
                android:hint="@string/valor_x3text"/>
            <EditText
                android:maxLength="8"
                android:inputType="numberSigned"
                android:id="@+id/tx3"
                android:gravity="center"
                android:layout_width="@dimen/varx.tam.sizex"
                android:layout_height="@dimen/varx.tam.sizey"
                android:textSize="12sp"
                android:hint="@string/Total"/>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/Resultado"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/layouttree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/resultadotext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:textSize="18sp"
            android:text="@string/Res"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12sp"
            />
        <TextView
            android:id="@+id/totalt1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12sp"/>
            <TextView
                android:id="@+id/totalt2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12sp"/>
            <TextView
                android:id="@+id/totalt3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12sp"/>
            <TextView
                android:id="@+id/TotalEcu1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12sp" />
            <TextView
                android:id="@+id/TotalEcu2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12sp"/>
            <TextView
                android:id="@+id/TotalEcu3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12sp"/>
            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/autor"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_below="@+id/Resultado">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Info"
            android:gravity="center"/>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>
